--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
                             <span class="tech-tag">DATABASE</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://ajengpuspitaloka.github.io/PortofolioAjeng2231043/" class="project-link">GitHub</a>
+                            <a href="https://ajengpuspitaloka.github.io/PortofolioAjeng2231043/" class="project-link">GitHub (Klik untuk melihat Demo)</a>
                         </div>
                     </div>
                 </div>
