--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
             <div class="profile">
                 <img src="../ProjectPWL/Ajeng.jpeg" alt="Foto Profil" class="profile-img">
                 <div class="profile-text">
-                    <h1 class="name">Nama Mahasiswa</h1>
+                    <h1 class="name">Ajeng Puspitaloka</h1>
                     <div class="title">Mahasiswa Teknik Informatika</div>
                     <p>Pengembang Web | UI/UX Designer | Programmer</p>
                     <div class="social-icons">
