--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
 
                         </div>
                         <div class="project-links">
-                            <a href="file:///C:/Users/ASUS/Downloads/Project%20Medichub.pdf" class="project-link">Demo</a>
+                            <a href="https://drive.google.com/file/d/1QjDcjvXsXF6K4ChZpslXBUI5NEFlRQnB/view?usp=sharing" class="project-link">Demo</a>
                         </div>
                     </div>
                 </div>
