--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
     <header>
         <div class="header-content">
             <div class="profile">
-                <img src="../ProjectPWL/Ajeng.jpeg" alt="Foto Profil" class="profile-img">
+                <img src="Ajeng.jpeg" alt="Foto Profil" class="profile-img">
                 <div class="profile-text">
                     <h1 class="name">Ajeng Puspitaloka</h1>
                     <div class="title">Mahasiswa Teknik Informatika</div>
