--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
             <h2 class="section-title">Proyek</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="../ProjectPWL/projectmagang.png" alt="Proyek 1" class="project-img">
+                    <img src="projectmagang.png" alt="Proyek 1" class="project-img">
                     <div class="project-content">
                         <h3 class="project-title">IT Support Dashboard</h3>
                         <h4 class="project-title">PLN ICON PLUS MAMPANG</h4>
@@ -737,7 +737,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="../ProjectPWL/projectmoprog.png" alt="Proyek 2" class="project-img">
+                    <img src="projectmoprog.png" alt="Proyek 2" class="project-img">
                     <div class="project-content">
                         <h3 class="project-title">MedicHub</h3>
                         <p>MedicHub adalah aplikasi layanan kesehatan digital yang memberikan kemudahan akses ke berbagai kebutuhan medis, 
@@ -750,7 +750,7 @@
 
                         </div>
                         <div class="project-links">
-                            <a href="https://drive.google.com/file/d/1QjDcjvXsXF6K4ChZpslXBUI5NEFlRQnB/view?usp=sharing" class="project-link">Demo</a>
+                            <a href="Project Medichub.pdf" class="project-link">Demo</a>
                         </div>
                     </div>
                 </div>
