--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                 <div class="profile-text">
                     <h1 class="name">Ajeng Puspitaloka</h1>
                     <div class="title">Mahasiswa Teknik Informatika</div>
-                    <p>Pengembang Web & Mobile | UI/UX Designer | Data Enthusiast</p>
+                    <p>Pengembang Web & Mobile | UI/UX Designer</p>
                     <div class="contact-info-header">
                         Kab. Bekasi | ajengpuspitaloka1@gmail.com | +6282114293138
                     </div>
@@ -641,7 +641,7 @@
                         <a href="https://github.com/ajengpuspitaloka" target="_blank"><i>💻</i></a>
                         <a href="mailto:ajengpuspitaloka1@gmail.com"><i>📧</i></a>
                         <a href="https://linkedin.com" target="_blank"><i>🔗</i></a>
-                        <a href="tel:+6282114293138"><i>📱</i></a>
+                        <a href="telp:+6282114293138"><i>📱</i></a>
                     </div>
                 </div>
             </div>
@@ -775,7 +775,7 @@
             <h2 class="section-title">Proyek</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="project-img">Gambar Proyek</div>
+                <img src="projectmagang.png" alt="Magang" class="project-img">
                     <div class="project-content">
                         <h3 class="project-title">Pengaduan Pelayanan PLN</h3>
                         <div class="project-subtitle">Proyek Pemrograman Web Lanjutan</div>
@@ -787,12 +787,12 @@
                             <span class="tech-tag">CRUD</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">Lihat Detail</a>
+                            <a href="https://ajengpuspitaloka.github.io/PortofolioAjeng2231043/" class="project-link">Lihat Detail</a>
                         </div>
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-img">Gambar Proyek</div>
+                <img src="projectmoprog.png" alt="Medichub" class="project-img">
                     <div class="project-content">
                         <h3 class="project-title">Medichub</h3>
                         <div class="project-subtitle">Proyek Pemrograman Mobile</div>
@@ -804,14 +804,14 @@
                             <span class="tech-tag">API</span>
                         </div>
                         <div class="project-links">
-                            <a href="Project Medichub.pdf" class="project-link">Lihat Demo</a>
+                            <a href="Project Medichub.pdf" class="project-link">Lihat Project</a>
                         </div>
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-img">Gambar Proyek</div>
+                <img src="ProjectGrafkom.png" alt="GRAFKOM" class="project-img">
                     <div class="project-content">
-                        <h3 class="project-title">Burning Kecli</h3>
+                        <h3 class="project-title">Burung kecil</h3>
                         <div class="project-subtitle">Proyek Grafika Komputer dan Animasi</div>
                         <p>Animasi 3D karakter burung kecil dengan elemen lingkungan untuk mendukung penceritaan visual.</p>
                         <div class="project-tech">
@@ -821,12 +821,12 @@
                             <span class="tech-tag">Rigging</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">Lihat Video</a>
+                            <a href="VidGrafkom.mp4" class="project-link">Lihat Video</a>
                         </div>
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-img">Gambar Proyek</div>
+                <img src="ProjectPBO.jpg" alt="PBO" class="project-img">
                     <div class="project-content">
                         <h3 class="project-title">Sistem Penjualan Apartemen</h3>
                         <div class="project-subtitle">Proyek Pemrograman Berorientasi Objek</div>
@@ -836,9 +836,6 @@
                             <span class="tech-tag">Swing</span>
                             <span class="tech-tag">NetBeans</span>
                             <span class="tech-tag">OOP</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link">Lihat Kode</a>
                         </div>
                     </div>
                 </div>
