--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@
                         <a href="mailto:ajengpuspitaloka1@gmail.com" class="social-link">
                             <i class="fas fa-envelope"></i>
                         </a>
-                        <a href="https://linkedin.com" target="_blank" class="social-link">
+                        <a href="https://www.linkedin.com/in/ajeng-puspitaloka-446103299/" target="_blank" class="social-link">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                         <a href="tel:+6282114293138" class="social-link">
