--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Pengaduan Pelayanan PLN</h3>
-                        <p class="project-subtitle">Proyek Pemrograman Web Lanjutan</p>
+                        <p class="project-subtitle">Proyek Pemrograman Web Lanjut</p>
                         <p>Aplikasi web manajemen pengaduan menggunakan Laravel 12 dengan autentikasi pengguna/admin dan akses dashboard berbasis peran.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Laravel</span>
